# OpenAnime-Desktops

./: .gitignore  LICENSE  README.md  install.sh  package.json  svelte.config.js  tauri-wrapper.js  vite.config.js
.github/workflows/: release.yml  test-build.yml
BELGELER/: arayuz-bilgisi.md  bilgi-bankasi.md  kronoloji.md  toast-devtools-test.js  ultra_deep_diagnostic.js
packaging/arch/: .SRCINFO  PKGBUILD
plans/: goodbye-dpi-entegrasyon-plani.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.debug.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer.nsi
src-tauri/permissions/: allow-fetch-css.toml  allow-read-local-video.toml  discord_rpc.toml  dpi_proxy.toml  gpu_diagnostics.toml  native_render.toml  open_new_window.toml  open_theme_window.toml  perf_mode.toml  session_log.toml  super_notifications.toml  theme_builder.toml  themes.toml  updater.toml  webgpu_bridge.toml
src-tauri/src/: discordRPC.rs  gpu_detector.rs  gst_detector.rs  init.js  init.js.bak  lib.rs  local_video_server.rs  logger.rs  main.rs  native_render.rs  native_toast.rs  native_tray_menu.rs  perf_mode.rs  super_notifications.rs  updater.rs  video_decode.rs  webgpu_bridge.rs
src-tauri/src/dpi_proxy/: http_mod.rs  methods.rs  mod.rs  remote_proxy.rs  settings.rs  tcp_forward.rs  tls_detect.rs
src-tauri/src/gpu/: mod.rs
src-tauri/src/gpu/backend/: mod.rs  selector.rs
src-tauri/src/gpu/diagnostics/: mod.rs  report.rs  types.rs
src-tauri/src/gpu/linux/: detector.rs  mod.rs  webkit.rs
src-tauri/src/gpu/macos/: detector.rs  mod.rs
src-tauri/src/gpu/vulkan/: mod.rs  probe.rs
src-tauri/src/gpu/webgpu/: checker.rs  mod.rs
src-tauri/src/gpu/wgpu_fb/: fallback.rs  mod.rs
src-tauri/src/gpu/windows/: detector.rs  mod.rs
src-tauri/src/js/: init.js
src-tauri/src/js/modules/: fullscreen-manager.js  image-cache.js  image-rightsizer.js  keyboard-shortcuts.js  link-interceptor.js  linux-polyfills.js  local-library.js  local-player.js  network-cache.css  network-cache.js  page-recovery.js  performance-css.js  player-perf.js  super-notifications-ui.js  tauri-bridge.js  updater-ui.js  video-optimizer.js  webgpu-bridge.js  webgpu-native-shim.js  webgpu-patcher.js  window-controls.css  window-controls.js  zoom-manager.css  zoom-manager.js
src-tauri/src/js/modules/discord/: anime-extractor.js  discord-rpc.js  poster-fetcher.js  settings-ui.js  state.js
src-tauri/src/js/modules/theme/: theme-core.js  theme-hide.css  theme-observer.js  theme-page-core.js  theme-page-render.js  theme-styles.css  theme-styles.js
src-tauri/src/renderer/: adapter.rs  cache.rs  compute.rs  device.rs  mod.rs  pipeline.rs  present.rs  renderer.rs  shader.rs  surface.rs  texture.rs  upload.rs
src-tauri/src/renderer/shaders/: anime_upscale.wgsl  bicubic.wgsl  denoise.wgsl  edge_enhancement.wgsl  frame_gen.wgsl  lanczos.wgsl  motion_vector.wgsl  present.wgsl  sharpen.wgsl
src/lib/: theme-format.ts
src/lib/components/: ColorEditor.svelte  ColorField.svelte  DpiStatus.svelte  IconPicker.svelte  PreviewPanel.svelte  ThemeAccordion.svelte  ThemeControls.svelte  ThemePreview.svelte
src/lib/icons/: fluent.ts
src/lib/stores/: theme.svelte.ts
src/lib/types/: theme.ts
src/lib/utils/: themeEngine.ts
src/routes/: +layout.svelte  +page.svelte
updater/: latest-alpha.json  latest-beta.json  latest-stable.json
