[package]
name = "openanime"
version = "1.0.2-beta-02"
description = "OpenAnime"
authors = [".dark_hunter"]
edition = "2021"

[lib]
name = "openanime_desktops_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# "unstable": webview'sız düz pencere (tauri::window::WindowBuilder) için —
# GPU overlay pencereleri yalnızca wgpu surface handle'ı ister; her overlay'in
# tam bir WebKit webview başlatması hem ~100 MB israftı hem de webkit 2.44+
# renderer bug'larına gereksiz maruziyetti.
tauri = { version = "2", features = ["native-tls-vendored", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2.4.1"
discord-rich-presence = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
regex = "1.10"
rfd = "0.15"
url = "2.5"
percent-encoding = "2.3"
tiny_http = "0.12"
base64 = "0.22"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"

[target.'cfg(target_os = "linux")'.dependencies]
wgpu = "22.1.0"
gpu-allocator = "=0.28.0"
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"
raw-window-handle = "0.6.2"
# GPU probe penceresi: GTK'nın Xlib bağlantısı thread-safe olmadığından probe,
# dlopen'la açılan AYRI bir X bağlantısı üzerinde koşar (link-time bağımlılık yok).
x11-dl = "2.21"

# panic = "abort" KULLANILMAZ: wgpu doğrulama hataları ve GStreamer panic'leri
# tüm uygulamayı öldürmesin diye unwinding açık kalır. Async Tauri komutundaki
# bir panic yalnızca o task'ı düşürür; uygulama yaşamaya devam eder.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

# Test/build CI için hafif profil — LTO kapalı, daha hızlı derlenir
[profile.test-release]
inherits = "release"
opt-level = 2
lto = false
codegen-units = 16
strip = false
