[package]
name = "openanime"
version = "1.0.0"
description = "OpenAnime"
authors = ["OpenAnime"]
edition = "2021"

[lib]
name = "openanime_desktops_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["native-tls-vendored", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-single-instance = "2"
discord-rich-presence = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
# "stream": bildirim SSE akışını (/user/notifications/sse) parça parça okumak için.
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
regex = "1.10"
rfd = "0.15"
url = "2.5"
percent-encoding = "2.3"
tiny_http = "0.12"
base64 = "0.22"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"
# EcoQoS (verimlilik modu) + WebView2 alt süreçlerini bulmak için.
# Sürüm, webview2-com'un zaten çektiği windows 0.61.3 ile aynı — çakışma yok.
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_ProcessStatus",
  "Win32_System_Console",
] }

# panic = "abort" KULLANILMAZ: async Tauri komutundaki bir panic tüm uygulamayı
# öldürmesin diye unwinding açık kalır — panic yalnızca o task'ı düşürür.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

# Test/build CI için hafif profil — LTO kapalı, daha hızlı derlenir
[profile.test-release]
inherits = "release"
opt-level = 2
lto = false
codegen-units = 16
strip = false
